# kurt-core

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  BORING_UI_FULL_IMPLEMENTATION_PLAN.md  BORING_UI_INTEGRATION_PLAN.md  BROWSER_TEST_SUMMARY.md  CLAUDE.md  COMPARISON_workflow_granularity.md  COMPONENTS_IMPLEMENTATION.md  DATABASE_MODES.md  EXAMPLE_refactored_fetch_workflow.py  FETCH_ARCHITECTURE_ANALYSIS.md  FETCH_CONTENT_ANALYSIS.md  FINAL_SUMMARY.md  FINAL_VERIFICATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_KICKOFF.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_VALIDATION.md  KURT_CLOUD.md  KURT_CLOUD_INTEGRATION.md  KURT_CLOUD_WEB_API.md  KURT_SIMPLIFICATION_PLAN.md  POSTGRES.md  PR-PROOF.md  PROPOSAL_entity_resolution_workflow.md  PROPOSAL_workflows_refactor.md  README-WEB.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_FETCH_UTILS.md  REFACTORING_RECOMMENDATIONS.md  REFACTORING_SUMMARY.md  REVIEW_FEEDBACK_LOOP2.md  TELEMETRY.md  TELEMETRY_IMPLEMENTATION.md  TESTING_GITHUB_APP.md  WORKER4_COMPLETION_REPORT.md  WORKER_1_COMPLETION_REPORT.md  (+19 more)
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.planning/: PROJECT.md  STATE.md
.storybook/: main.ts  preview.ts
archive/: CODEX_REVIEW_SUMMARY.md  README.md
claude-plugin/: KURT_MAP.md  kurt-architecture.mmd  settings.json  settings.local.json
claude-plugin-slim/: CLAUDE.md
docs/: ARCHITECTURE.md  ARCHITECTURE_CLOUD.md  ARCHITECTURE_REFACTOR_PLAN.md  MULTI_TENANCY.md  PROJECT_CONTEXT.md  QUALITY.md  README.md  background-workflow-requirements.md  (+4 more)
eval/: README.md  (+13 more)
(+2638 files in other folders)
