[project]
name = "kurt"
version = "0.1.0"
description = "Document intelligence CLI - Transform documents into structured knowledge graphs"
readme = "README.md"
authors = [
    { name = "huraultj", email = "julien.hurault+boringdata@sumeo.io" }
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "sqlmodel>=0.0.14",
    "trafilatura>=2.0.0",
    "httpx>=0.27.0",
    "dspy>=2.5.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.0",
    "feedparser>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.scripts]
kurt = "kurt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
